--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,45 +23,74 @@ ul a {
     text-decoration: none;
 }
 [class*="span-"] {
-    background-color: aqua;
-    border: 1px solid brown;
+    background-color: rgb(156, 156, 156);
+    border: 1px solid rgb(255, 230, 0);
 }
 .boxed {
-    margin: 0 10%;
-    width: 80%;
+    margin: 0 auto;
+    width: 95%;
+    max-width: 1100px;
 }
-.feature {
-    height: 600px;
+.feature.wrapper {
+    height: 544px;
+    grid-gap: 0 !important;
+    justify-content: center !important;
+    color: white;
 }
 .feature .span-4-12 div:nth-child(1) {
-    height: 300px;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/mcafeecryptojack-796x448.jpg");
+    background-size:cover;
+    background-position: center;
+    background-repeat:no-repeat;
+    border: 4px solid white;
+    height: 272px;
 }
 .feature .span-4-12 div:nth-child(2) {
-    height: 300px;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/Beats-796x417.png");
+    background-size:cover;
+    background-position: center;
+    background-repeat:no-repeat;
+    border: 4px solid white;
+    height: 272px;
 }
-.latest-news {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+.feature .span-4-12 {
+    width: 33.33%;
 }
-/*
+.feature > .span-8-12{
+    background-image: linear-gradient(135deg, rgba(255,23,23,0.78) 0%,rgba(255,23,23,0.77) 11%,rgba(62,6,6,0.75) 55%,rgba(0,0,0,0.78) 69%,rgba(0,0,0,0.85) 100%) ,url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/header-image-damn-it-feels-good-796x417.png");
+    background-size:cover;
+    background-position: center;
+    background-repeat:no-repeat;
+    border: 4px solid white;
+    width: 66.66%%;
+}
+.latest-news figure {
+    margin: 0 0 10px 0;
+}
+.latest-news img {
+    width: 100%;
+    max-height: 135px;
+}
+
+/*--------------------Span-Sizes----------------*/
 .span-1-12 {
     width: 8%;
     min-width: 83px;
 }
 .span-2-12 {
-    width: 16.3%;
+    width: 15.83%;
     min-width: 165px;
 }
 .span-3-12 {
-    width: 24.5%;
+    width: 24.25%;
     min-width: 250px;
 }
 .span-4-12 {
-    width: 33%;
+    width: 32.66%;
     min-width: 330px;;
 }
 .span-6-12 {
-    width: 49%;
+    width: 49.5%;
     min-width: 495px;
 }
 .span-8-12 {
@@ -72,30 +101,30 @@ ul a {
     width: 82.5;
     min-width: 835px;
 }
-/*.wrapper {
+.wrapper {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 0;
+    justify-content: space-around;
+    margin: 0 0 50px 0;
+    grid-gap: 1%;
     padding: 0;
     width: 100%;
 }
-.wrapper {
-    background: white;
-    margin: 0 0 20px 0;
-    grid-gap: 12px;
-  }
-.wrapper:after {
-   
-    content: "";
-    display: table;
-    clear: both;
-    
-}
 [class*='span-'] {
     float: left;
-    padding-right: 20px;
+    margin-bottom: 1%;
+}
+}
+.wrapper:after {
+  content: "";
+  display: table;
+  clear: both;  
+}
+/*
+.latest-news {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 .grid [class*='span-']:last-of-type {
@@ -110,4 +139,10 @@ ul a {
   body {
     margin: 1rem;
     font: 12px system-ui;
-  }*/
+  }
+  .wrapper:after {
+    content: "";
+    display: table;
+    clear: both;  
+}
+  */
