Categories Image added and styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,12 @@ ul a {
     background-color: rgb(156, 156, 156);
     border: 1px solid rgb(255, 230, 0);
 }
+.category-article {
+    padding-top:35%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%);
+    background-position: center;
+    background-size: cover;
+}
 .boxed {
     margin: 0 auto;
     width: 95%;
