--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+h3 {
+    color: #f42;
+    font-family: 'Oswald', sans-serif;
+    font-style: bold;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: left;
+}
+h3:hover {
+    color: black;
 }
 nav {
     display: inline-flex;
@@ -23,19 +35,85 @@ ul a {
     text-decoration: none;
 }
 [class*="span-"] {
+    /*
     background-color: rgb(156, 156, 156);
     border: 1px solid rgb(255, 230, 0);
+    */
 }
-.category-article {
-    padding-top:35%;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%);
-    background-position: center;
-    background-size: cover;
+.author {
+    font-size: 12px;
+    color: rgb(128, 128, 128);
+    line-height: 1.5;
+    font-weight: 700;
 }
 .boxed {
     margin: 0 auto;
     width: 95%;
     max-width: 1100px;
+}
+.category-article {
+    padding:35% 10px 10px 10px;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%);
+    background-position: center;
+    background-size: cover;
+    color: white;
+    padding: 8px
+    margin: 0;
+}
+.category-article > a {
+    text-decoration: none;
+    font-size: 14px;
+    font-family: 'Oswald', sans-serif; 
+    color: white;
+    text-transform: uppercase;
+}
+.category-article h4 {
+    margin: 10px 0;
+    font-size: 20px;
+}
+.category-latest {
+    margin: 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    background-color: #fff4f2;
+    color: #f42;
+}
+.category-latest h5 {
+    margin: 0;
+    padding:10px 0;
+}
+.category-related a {
+    color: #555;
+    font-size: 13px;
+    line-height: 1.8;
+}
+.category-related li {
+    border-bottom: 1px solid #eeeeee;
+    margin-bottom: 5px;
+}
+.category-related ul {
+    list-style: none;
+}
+.category-related ul li::before {
+    content: "\2022";
+    color: #f42;
+    font-weight: 700;
+    display: inline-block; 
+    width: 1.5em;
+    margin-left: -1.5em;
+}
+.deal > a > img {
+    width: 100%;
+    height: auto;
+}
+.deal-data > span {
+    color: #555;
+}
+.past-deal {
+    text-decoration: line-through;
+    font-size: 13.5px;
+    color: rgb(124, 124, 124);
+    padding-right:10px;
 }
 .feature.wrapper {
     height: 544px;
@@ -77,7 +155,41 @@ ul a {
     width: 100%;
     max-height: 135px;
 }
-
+.latest-deals h3 {
+    display: inline-block;
+    color: #f42;
+    font-family: 'Oswald', sans-serif;
+    font-style: bold;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: left;
+}
+.latest-news h4 {
+    margin: 7px 0;
+    font-size: 14px;
+    line-height: 18px;
+}
+.latest-funding > span > span,
+.latest-deals > span > span {
+    display: inline-block;
+    width: 49.5%;
+}
+.latest-funding > span span:nth-child(2),
+.latest-deals > span span:nth-child(2) {
+    text-align: right;
+    color: #f42;
+}
+.latest-funding > span > span > a,
+.latest-deals > span > span > a{
+    text-decoration: none;
+    color: #f42;
+}
+.publish-time {
+    font-size: 12px;
+    color: rgb(128, 128, 128);
+    line-height: 1.5;
+    font-weight: 700;
+}
 /*--------------------Span-Sizes----------------*/
 .span-1-12 {
     width: 8%;
