--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h3:hover {
 nav {
     display: inline-flex;
     flex-direction: row;
-    align-items: flex-start
+    align-items: flex-start;
     width: 100%;
 }
 nav li {
@@ -45,11 +45,15 @@ ul a {
     color: rgb(128, 128, 128);
     line-height: 1.5;
     font-weight: 700;
+    text-decoration: none;
 }
 .boxed {
     margin: 0 auto;
     width: 95%;
     max-width: 1100px;
+}
+.categories.author:hover {
+    color: rgb(206, 206, 206)
 }
 .category-article {
     padding:35% 10px 10px 10px;
@@ -156,12 +160,6 @@ ul a {
     max-height: 135px;
 }
 .latest-deals h3 {
-    display: inline-block;
-    color: #f42;
-    font-family: 'Oswald', sans-serif;
-    font-style: bold;
-    font-size: 28px;
-    line-height: 32px;
     text-align: left;
 }
 .latest-news h4 {
@@ -169,6 +167,47 @@ ul a {
     font-size: 14px;
     line-height: 18px;
 }
+.latest-news.author a:hover {
+    color: rgb(10, 10, 10)
+}
+.latest-funding h4 {
+    width: 100%;
+    background-color: #f42;
+    color: white;
+    font-size: 18px;
+    font-weight: 800;
+    padding: 10.6px 10px 10.6px 35%;
+    margin: 0;
+}
+.latest-funding p {
+    font-size: 14px;
+    color: #555;
+    width: 100%;
+    background-color: #fff4f2;
+    height:35px;
+    padding: 10.6px 10px 52px 35%;
+    margin: 0;
+}
+.latest-funding p > span {
+    color: black;
+    font-weight: 800;
+    line-height: 1.8;
+}
+.latest-funding .meta-data {
+    background-color: #fffaf8;
+    margin: 0;
+    padding: 10px;
+    color: #555;
+    font-size: 13px;
+}
+.tag {
+    line-height: 2.5;
+    border-bottom: 1px solid #fcc4b8;
+    width: auto;
+    padding: 0 20px 5px 20px;
+    margin: 0 -10px 15px -10px;
+}
+
 .latest-funding > span > span,
 .latest-deals > span > span {
     display: inline-block;
