--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,14 +31,8 @@ nav ul {
     list-style-type: none;
     overflow: hidden;
 }
-ul a {
+a {
     text-decoration: none;
-}
-[class*="span-"] {
-    /*
-    background-color: rgb(156, 156, 156);
-    border: 1px solid rgb(255, 230, 0);
-    */
 }
 .author {
     font-size: 12px;
@@ -48,9 +42,10 @@ ul a {
     text-decoration: none;
 }
 .boxed {
-    margin: 0 auto;
+    margin: 10px auto;
     width: 95%;
     max-width: 1100px;
+    display: block;
 }
 .categories.author:hover {
     color: rgb(206, 206, 206)
@@ -142,6 +137,9 @@ ul a {
 .deal-data > span {
     color: #555;
 }
+.deal-data h5 > a{
+    color: black;
+}
 .description a {
     color: #aaa;
     text-decoration: none;
@@ -151,39 +149,6 @@ ul a {
     font-size: 13.5px;
     color: rgb(124, 124, 124);
     padding-right:10px;
-}
-.feature.wrapper {
-    height: 544px;
-    grid-gap: 0 !important;
-    justify-content: center !important;
-    color: white;
-}
-.feature .span-4-12 div:nth-child(1) {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/mcafeecryptojack-796x448.jpg");
-    background-size:cover;
-    background-position: center;
-    background-repeat:no-repeat;
-    border: 4px solid white;
-    height: 272px;
-}
-.feature .span-4-12 div:nth-child(2) {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%,rgba(0,0,0,0.7) 100%), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/Beats-796x417.png");
-    background-size:cover;
-    background-position: center;
-    background-repeat:no-repeat;
-    border: 4px solid white;
-    height: 272px;
-}
-.feature .span-4-12 {
-    width: 33.33%;
-}
-.feature > .span-8-12{
-    background-image: linear-gradient(135deg, rgba(255,23,23,0.78) 0%,rgba(255,23,23,0.77) 11%,rgba(62,6,6,0.75) 55%,rgba(0,0,0,0.78) 69%,rgba(0,0,0,0.85) 100%) ,url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/header-image-damn-it-feels-good-796x417.png");
-    background-size:cover;
-    background-position: center;
-    background-repeat:no-repeat;
-    border: 4px solid white;
-    width: 66.66%%;
 }
 .latest-news figure {
     margin: 0 0 10px 0;
@@ -225,6 +190,18 @@ ul a {
     color: black;
     font-weight: 800;
     line-height: 1.8;
+}
+.latest-funding .header {
+    z-index: 1;
+}
+.latest-funding .span-3-12 > div:nth-child(1){
+    position: relative;
+    z-index: 2;
+    top: 80px;
+    left: 15px;
+}
+.latest-funding .span-3-12 > div:nth-child(1) img{
+    height:60px;
 }
 .latest-funding .meta-data {
     background-color: #fffaf8;
@@ -298,44 +275,20 @@ ul a {
     display: inline-flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin: 0 0 50px 0;
     grid-gap: 1%;
     padding: 0;
     width: 100%;
+    position: block;
 }
 [class*='span-'] {
     float: left;
     margin-bottom: 1%;
 }
-}
 .wrapper:after {
   content: "";
-  display: table;
+  width: 100%;
+  display: inline-block;
   clear: both;  
 }
-/*
-.latest-news {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
-.grid [class*='span-']:last-of-type {
-    padding-right: 0;
-  }
-  .wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 1rem;
-  }
-
-  body {
-    margin: 1rem;
-    font: 12px system-ui;
-  }
-  .wrapper:after {
-    content: "";
-    display: table;
-    clear: both;  
-}
-  */
