--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,8 +36,22 @@ nav {
   height: 3rem;
   justify-content: space-between;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   z-index: 4;
+  .hidden-logo {
+    /* Hidden Logo */
+    background: linear-gradient(to bottom right,#c09,#f42 85%);
+    display: none;
+    float: left;
+    height: 100%;
+    padding: 0 3%;
+    img {
+      /* Logo img Itself */
+      margin-top: 25%;
+      height: 16px;
+      width: 66px;
+    }
+  }
   ul {
     align-items: center;
     display: inherit;
@@ -46,7 +60,7 @@ nav {
     list-style: none;
     margin: 0;
     padding: 0;
-    width: 40%;
+    width: 40vw;
     li {
       padding: 1% 3.5%;
       text-align: center;
@@ -72,15 +86,21 @@ nav {
     }
   }
   .search-bar {
-    border-left: 1px solid #aaaaaa40;
+    border: 1px solid #aaaaaa40;
     float: right;
-    padding: 1% 1.5%;
+    font-size: 1em;
+    padding: 15px;
+    width: 20px;
     &:hover {
       color: #3f3f3f;
       cursor: pointer;
     }
-    .fa-search {
-      font-size: 1rem;
+    &.hidden-menu {
+      /* Hidden Menu */
+      display: none;
+      .fa-bars {
+        color: red;
+      }
     }
   }
 }
@@ -669,6 +689,18 @@ footer {
 
 }
 @media only screen and (max-width: 750px) {
+  nav {
+    display: inline-block;
+    div:nth-of-type(1) {
+      display: block !important;
+    }
+    ul {
+      display: none !important;
+    }
+    .hidden-menu {
+      display: block !important;
+    }
+  }
   .span-4-12,
   .span-6-12,
   .span-8-12,
