--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@ body {
 }
 h3:hover {
   color: black;
+  cursor: pointer;
 }
 /* General Styles End */
 /* Footer Start */
@@ -299,20 +300,25 @@ nav {
   display: grid;
   grid-column-gap: 0.6%;
   grid-row-gap: 2%;
-  grid-template-areas: "main main main main side1 side1""main main main main side2 side2";
+  grid-template-areas: "main main main main side1 side1"
+                       "main main main main side2 side2";
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
   padding: 0.6%;
   padding-top: 5%;
   height: 75vh;
   width: auto;
-  [class*="side"] {
+  a {
+    color: white;
+  }
+  [class^="side"] {
     .content {
       margin: 0 !important;
     }
-  }
-  a {
-    color: white;
+    h3 {
+      font-size: 1.75rem !important;
+      margin: 2.5% !important;
+    }
   }
   .content {
     bottom: 4px;
@@ -325,31 +331,9 @@ nav {
       font-weight: bold;
       margin: 0;
     }
-    .feature {
-      &.category {
-        font-size: 0.85rem;
-        text-transform: uppercase;
-      }
-    }
-    .main-feature {
-      background-image: url("../img/cover-gradient.png"), url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/header-image-damn-it-feels-good-796x417.png");
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      grid-area: main;
-      position: relative;
-      header {
-        padding: 2.5%;
-        img {
-          margin-top: 1%;
-          width: 50%;
-        }
-        span {
-          color: white;
-          float: right;
-          font-family: Helvetica, Arial, sans-serif;
-          font-size: 0.85rem;
-        }
-      }
+    .feature.category {
+      font-size: 0.85rem;
+      text-transform: uppercase;
     }
     .metadata {
       /* Grabs the Image's Metadata */
@@ -364,35 +348,64 @@ nav {
         margin: 0;
         padding: 0;
         width: 100%;
+        a {
+          color: inherit;
+          font-family: inherit;
+          font-style: none;
+          &:hover {
+            color: white;
+          }
+        }
         li {
-          a {
-            color: inherit;
-            font-family: inherit;
-            font-style: none;
-            &:hover {
-              color: white;
-            }
-            i {
-              font-size: inherit;
-            }
+          padding-right: 2%;
+          i {
+            font-size: inherit;
           }
         }
       }
     }
-    .side1-feature {
-      background-image: url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/mcafeecryptojack-796x448.jpg");
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      grid-area: side1;
-      position: relative;
+  }
+  .main-feature {
+    background-image: url("../img/cover-gradient.png"), url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/header-image-damn-it-feels-good-796x417.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    grid-area: main;
+    position: relative;
+    header {
+    padding: 2.5%;
+      img {
+        width: 50%;
+      }
+      span {
+        color: white;
+        float: right;
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 0.85rem;
+      }
     }
-    .side2-feature {
-      background-image: url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/Beats-796x417.png");
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      grid-area: side2;
-      position: relative;
-    }
+  }
+  .side1-feature {
+    background-image: url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/mcafeecryptojack-796x448.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    grid-area: side1;
+    position: relative;
+  }
+  .side2-feature {
+    background-image: url("../img/image-gradient.png"), url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/06/Beats-796x417.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    grid-area: side2;
+    position: relative;
+  }
+}
+.side1-feature h4,
+.side2-feature h4 {
+  font-size: 1.75rem;
+  margin: 2.5%;
+  &:hover {
+    color: black;
+    cursor: pointer;
   }
 }
 .side1-feature h4,
@@ -533,12 +546,12 @@ nav {
   width: 15.83%;
 }
 .span-3-12 {
-  min-width: 230px;
-  width: 24.25%;
+  min-width: 220px;
+  width: 22.25%;
 }
 .span-4-12 {
-  min-width: 330px;
-  width: 32.66%;
+  min-width: 300px;
+  width: 30.66%;
 }
 .span-6-12 {
   min-width: 495px;
@@ -565,7 +578,7 @@ nav {
 }
 [class*='span-'] {
   float: left;
-  margin-bottom: 1%;
+  margin-bottom: 0 1% 1% 1%;
 }
 /*---------------------------------------------------------------------------*/
 
