--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -578,7 +578,7 @@ nav {
 }
 [class*='span-'] {
   float: left;
-  margin-bottom: 0 1% 1% 1%;
+  margin: 0 1% 1% 1%;
 }
 /*---------------------------------------------------------------------------*/
 
