--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -686,7 +686,7 @@ nav .search-bar .fa-search {
 
 [class*='span-'] {
   float: left;
-  margin-bottom: 0 1% 1% 1%;
+  margin: 0 1% 1% 1%;
 }
 
 /*---------------------------------------------------------------------------*/
